--- a/MyDietDiary-main/templates/login.html
+++ b/MyDietDiary-main/templates/login.html
@@ -10,7 +10,7 @@
             integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
             {% load static %}
     
-            <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
+            <link rel="stylesheet" type="text/css" href="F:\Shreyas\BE Project\MyDietDiary\MyDietDiary-main\templates\login.css">
             <title>MyDietDiary</title>
     </head>
     <body>
