--- a/MyDietDiary-main/templates/basic.html
+++ b/MyDietDiary-main/templates/basic.html
@@ -12,6 +12,7 @@
     {% load static %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>    
     <title>MyDietDiary</title>
 </head>
 
@@ -20,7 +21,7 @@
     <header>
        <a href="/" class="logo">MYDIETDIARY</a>
         <ul class="m-0">
-            <li><a href="/home" class="btn btn-warning">Home</a></li>
+            <li><a href="/" class="btn btn-warning">Home</a></li>
             <li><a href="/dietplanner" class="btn btn-warning">Diet Planner</a></li>
             <li><a href="/bodymass" class="btn btn-warning">Body Fat Calulator</a></li>
             <li><a href="http://localhost:3000" class="btn btn-warning">Dashboard</a></li>
