--- a/MyDietDiary-main/templates/basic.html
+++ b/MyDietDiary-main/templates/basic.html
@@ -22,7 +22,7 @@
        <a href="/" class="logo">MYDIETDIARY</a>
         <ul class="m-0">
             <li><a href="/" class="btn btn-warning">Home</a></li>
-            <li><a href="/dietplanner" class="btn btn-warning">Diet Planner button</a></li>
+            <li><a href="/dietplanner" class="btn btn-warning">Diet Planner</a></li>
             <li><a href="/bodymass" class="btn btn-warning">Body Fat Calulator</a></li>
             <li><a href="http://localhost:3000" class="btn btn-warning">Dashboard</a></li>
         </ul>
